<UI/UX fix 2.4.0>

--- a/app/src/main/res/layout/activity_anxiety.xml
+++ b/app/src/main/res/layout/activity_anxiety.xml
@@ -4,7 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@color/Hex"
+    >
+
     <LinearLayout
         android:id="@+id/activity_gad7"
         android:layout_width="match_parent"
@@ -13,8 +16,9 @@
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="16dp"
+        tools:context=".ui.anxiety.anxietyActivity"
         android:orientation="vertical"
-        tools:context=".ui.anxiety.anxietyActivity">
+        >
 
         <TextView
             android:id="@+id/general"
@@ -24,20 +28,21 @@
             android:layout_marginTop="20dp"
             android:text="over_the_last_2_weeks_how_often_have_you_been_bothered_by_the_following_problems"
             android:textAllCaps="false"
-            android:textColor="#3F51B5"
+            android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
             android:textColorHint="#3F51B5"
             android:textColorLink="#3F51B5"
-            android:textSize="30sp"
-            />
+            android:textSize="30sp" />
 
         <TextView
+            android:gravity="center"
+            android:orientation="vertical"
             android:id="@+id/question"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="feeling_nervous_anxious_or_on_edge"
             android:textAllCaps="false"
-            android:textColor="#3F51B5"
+            android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
             android:textColorHint="#3F51B5"
             android:textColorLink="#3F51B5"
@@ -48,6 +53,8 @@
             />
 
         <Button
+            android:gravity="center"
+            android:orientation="vertical"
             android:id="@+id/choice1"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -58,17 +65,14 @@
             android:backgroundTint="#C0B2E7"
             android:text="not_at_all_sure"
             android:textAllCaps="false"
-            android:textColor="#664564"
+            android:textColor="@color/white"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
             android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@+id/question"
-
-            />
+            app:layout_constraintTop_toBottomOf="@+id/question" />
 
         <Button
-            android:text="Several_days"
             android:id="@+id/choice2"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
@@ -77,15 +81,14 @@
             android:layout_marginTop="30dp"
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
+            android:text="Several_days"
             android:textAllCaps="false"
-            android:textColor="#664564"
+            android:textColor="@color/white"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
             android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@+id/choice1"
-
-            />
+            app:layout_constraintTop_toBottomOf="@+id/choice1" />
 
         <Button
             android:text="over_half_the_days"
@@ -98,13 +101,12 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="#664564"
+            android:textColor="@color/white"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
             android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@+id/choice2"
-
             />
 
         <Button
@@ -118,13 +120,12 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="#664564"
+            android:textColor="@color/white"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
             android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@+id/choice3"
-
             />
 
     </LinearLayout>
