--- a/app/src/main/res/layout/activity_bipolar.xml
+++ b/app/src/main/res/layout/activity_bipolar.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
+    android:background="@color/Hex"
     android:layout_height="fill_parent">
     <LinearLayout
         android:id="@+id/activity_phq9"
@@ -26,7 +27,7 @@
             android:layout_marginTop="20dp"
             android:layout_gravity="center"
             android:textAllCaps="false"
-            android:textColor="#3F51B5"
+            android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
             android:textColorHint="#3F51B5"
             android:textColorLink="#3F51B5"
@@ -44,7 +45,7 @@
             android:textSize="22sp"
             android:autoSizeTextType="uniform"
             android:textAllCaps="false"
-            android:textColor="#3F51B5"
+            android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
             android:textColorHint="#3F51B5"
             android:textColorLink="#3F51B5"
@@ -61,7 +62,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="#664564"
+            android:textColor="@color/white"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -80,7 +81,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="#664564"
+            android:textColor="@color/white"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -99,7 +100,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="#664564"
+            android:textColor="@color/white"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -118,7 +119,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="#664564"
+            android:textColor="@color/white"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -137,7 +138,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="#664564"
+            android:textColor="@color/white"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -156,7 +157,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="#664564"
+            android:textColor="@color/white"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
