--- a/app/src/main/res/layout/activity_depression.xml
+++ b/app/src/main/res/layout/activity_depression.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@color/Hex"
+    >
     <LinearLayout
         android:id="@+id/activity_phq9"
         android:layout_width="match_parent"
@@ -25,7 +27,7 @@
             android:layout_gravity="center"
             android:text="over_the_last_2_weeks_how_often_have_you_been_bothered_by_the_following_problems"
             android:textAllCaps="false"
-            android:textColor="#3F51B5"
+            android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
             android:textColorHint="#3F51B5"
             android:textColorLink="#3F51B5"
@@ -43,7 +45,7 @@
             android:autoSizeTextType="uniform"
             android:text="_1_little_interest_or_pleasure_in_doing_things"
             android:textAllCaps="false"
-            android:textColor="#3F51B5"
+            android:textColor="#234E70"
             android:textColorHighlight="#3F51B5"
             android:textColorHint="#3F51B5"
             android:textColorLink="#3F51B5"
@@ -60,7 +62,7 @@
             android:backgroundTint="#C0B2E7"
             android:text="not_at_all"
             android:textAllCaps="false"
-            android:textColor="#664564"
+            android:textColor="@color/white"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -79,7 +81,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="#664564"
+            android:textColor="@color/white"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -98,7 +100,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="#664564"
+            android:textColor="@color/white"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
@@ -118,7 +120,7 @@
             android:background="@drawable/rounded_button"
             android:backgroundTint="#C0B2E7"
             android:textAllCaps="false"
-            android:textColor="#664564"
+            android:textColor="@color/white"
             android:textColorHighlight="#664564"
             android:textColorHint="#664564"
             android:textColorLink="#664564"
