--- a/app/src/main/res/layout/activity_notes_list.xml
+++ b/app/src/main/res/layout/activity_notes_list.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusableInTouchMode="true"
-    tools:context="ui.notes.NotesListActivity">
+    tools:context="ui.notes.NotesListActivity"
+    android:background="@color/Hex">
 
     <TextView
         android:id="@+id/tv_empty"
@@ -40,6 +41,7 @@
         android:layout_margin="16dp"
         android:onClick="newNote"
         android:scaleType="center"
+        android:backgroundTint="@color/RobbinsEggBlue"
         android:src="@drawable/ic_note"
         app:fabSize="normal"
         android:contentDescription="TODO" />
