--- a/app/src/main/res/layout/activity_bipolar_result.xml
+++ b/app/src/main/res/layout/activity_bipolar_result.xml
@@ -10,7 +10,7 @@
     android:paddingRight="16dp"
     android:paddingTop="16dp"
     android:orientation="vertical"
-    android:background="#F2ECE0"
+    android:background="@color/Hex"
     tools:context=".ui.bipolar.bipolarResultActivity">
 
     <ImageView
@@ -30,7 +30,7 @@
         android:gravity="center"
         android:text="bipResult"
         android:textAllCaps="false"
-        android:textColor="#3F51B5"
+        android:textColor="#234E70"
         android:textColorHighlight="#3F51B5"
         android:textColorHint="#3F51B5"
         android:textColorLink="#3F51B5"
