--- a/app/src/main/res/layout/activity_delete_acount.xml
+++ b/app/src/main/res/layout/activity_delete_acount.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".ui.settings.DeleteAccount">
+    tools:context=".ui.settings.DeleteAccount"
+    android:background="@color/Hex"
+    >
 
     <EditText
         android:id="@+id/email"
@@ -51,12 +53,12 @@
         android:layout_width="178dp"
         android:layout_height="59dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="16dp"
         android:text="Submit Here"
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pass" />
 
