--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#cff7d3 "
+    android:background="@color/Hex"
     >
 
     <com.google.android.material.textfield.TextInputLayout
@@ -133,6 +133,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="55dp"
         android:layout_marginEnd="17dp"
+        android:backgroundTint="@color/Bluebell"
         android:text="@string/add_medicine"
         app:layout_constraintBaseline_toBaselineOf="@+id/cancel_btn"
         app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
@@ -145,7 +146,7 @@
         android:layout_marginEnd="55dp"
         android:layout_marginBottom="203dp"
         android:text="@string/cancel"
-        android:backgroundTint="#FF0000"
+        android:backgroundTint="@color/Raspberry"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/submitbtn"
@@ -160,7 +161,7 @@
         android:paddingTop="60dp"
         android:paddingBottom="10dp"
         android:text="@string/add_medicine"
-        android:textColor="@color/white"
+        android:textColor="#234E70"
         android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
