--- a/app/src/main/res/layout/activity_new_habit.xml
+++ b/app/src/main/res/layout/activity_new_habit.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
     android:orientation="vertical"
+    android:background="@color/Hex"
     tools:context=".ui.habits.NewHabitActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="252dp"
         android:paddingTop="30dp"
-        android:background="#efd8f5"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/Hex">
 
         <ImageView
             android:id="@+id/imageView"
@@ -27,11 +27,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/arima_madurai_extra_bold"
             android:textStyle="bold"
             android:text="@string/new_habit"
+            android:textColor="#234E70"
             android:textAlignment="center"
-            android:textColor="#1A237E"
             android:textSize="30sp" />
     </LinearLayout>
 
@@ -44,7 +43,7 @@
         android:paddingTop="50dp"
         android:layout_marginTop="-40dp"
         android:layout_marginBottom="40dp"
-        android:background="@drawable/habit_tracker_background"
+        android:background="@color/RobbinsEggBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent">
