--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -6,9 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusableInTouchMode="true"
-    tools:context="ui.notes.NoteActivity">
+    tools:context="ui.notes.NoteActivity"
+    android:background="@color/Hex">
 
     <ScrollView
+        android:background="@color/Hex"
         android:id="@+id/scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
