--- a/app/src/main/res/layout/activity_notification_fragment.xml
+++ b/app/src/main/res/layout/activity_notification_fragment.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.notifications.NotificationFragment">
+    tools:context=".ui.notifications.NotificationFragment"
+    android:background="@color/Hex">
 
     <Button
         android:id="@+id/pills"
