--- a/app/src/main/res/layout/view_habit.xml
+++ b/app/src/main/res/layout/view_habit.xml
@@ -6,23 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageButton
-        android:id="@+id/habitno"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:contentDescription="no"
-        android:src="@android:drawable/arrow_down_float"
-        android:background="@color/downArrow"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/habityes"
         android:layout_width="55dp"
         android:layout_height="55dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:background="@color/upArrow"
         android:contentDescription="yes"
         android:src="@android:drawable/arrow_up_float"
-        android:background="@color/upArrow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,20 +23,20 @@
         android:id="@+id/habitname"
         android:layout_width="286dp"
         android:layout_height="35dp"
+        android:layout_marginStart="28dp"
         android:paddingTop="5dp"
         android:textAlignment="center"
         android:textColor="#483d8b"
-        app:layout_constraintEnd_toStartOf="@+id/habitno"
         app:layout_constraintStart_toEndOf="@+id/habityes"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="252dp"
-        android:layout_height="33dp"
+        android:layout_width="287dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="28dp"
         android:progressTint="@color/black"
-        app:layout_constraintEnd_toStartOf="@+id/habitno"
         app:layout_constraintStart_toEndOf="@+id/habityes"
         app:layout_constraintTop_toBottomOf="@+id/habitname" />
 </androidx.constraintlayout.widget.ConstraintLayout>
