--- a/app/src/main/res/menu/doc_menu.xml
+++ b/app/src/main/res/menu/doc_menu.xml
@@ -5,13 +5,13 @@
 
 
     <item android:id="@+id/nav_medicine"
-        android:title="Settings"
+        android:title="@string/medicine"
         android:icon="@drawable/ic_medicine_svgrepo_com__1_"
         app:showAsAction="ifRoom"
         />
 
     <item android:id="@+id/nav_lab"
-        android:title="Settings"
+        android:title="@string/labs"
         android:icon="@drawable/ic_lab_svgrepo_com"
         app:showAsAction="ifRoom"
         />
