--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,20 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
-
-    <item android:id="@+id/nav_settings"
-        android:title="Settings"
-        android:icon="@drawable/ic_baseline_settings_24"
-        app:showAsAction="ifRoom"
-        />
     <item android:id="@+id/nav_doctor"
-        android:title="Settings"
+        android:title="@string/visits"
         android:icon="@drawable/ic_doctor_svgrepo_com"
         app:showAsAction="ifRoom"
         />
 
     <item android:id="@+id/nav_lab"
-        android:title="Settings"
+        android:title="@string/labs"
         android:icon="@drawable/ic_lab_svgrepo_com"
         app:showAsAction="ifRoom"
         />
