<UI/UX fix 2.4.1>

--- a/app/src/main/res/layout/activity_tasker_input.xml
+++ b/app/src/main/res/layout/activity_tasker_input.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="32dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/Hex"
+    >
 
     <EditText
         android:id="@+id/et_title"
@@ -56,5 +58,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:textColor="@color/white"
         android:text="@string/done" />
 </LinearLayout>
