--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.quiz.QuizActivity">
+    tools:context=".ui.quiz.QuizActivity"
+    android:background="@color/Hex">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="252dp"
         android:paddingTop="30dp"
-        android:background="#75FEF9B4"
+        android:background="@color/Hex"
         android:orientation="vertical">
 
         <ImageView
@@ -26,11 +27,10 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/arima_madurai_extra_bold"
             android:textStyle="bold"
             android:text="@string/self_assessment_quiz"
             android:textAlignment="center"
-            android:textColor="#1A237E"
+            android:textColor="#234E70"
             android:textSize="30sp" />
     </LinearLayout>
 
@@ -42,7 +42,7 @@
         android:layout_marginTop="-40dp"
         android:layout_marginBottom="40dp"
         android:orientation="vertical"
-        android:background="@drawable/quiz_background">
+        android:background="@color/Hex">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -61,7 +61,7 @@
 
                 <Button
                     android:id="@+id/button_adhd"
-                    android:textColor="#070505"
+                    android:textColor="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/adhd"
@@ -77,7 +77,7 @@
 
                 <Button
                     android:id="@+id/button_anxiety"
-                    android:textColor="#070505"
+                    android:textColor="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/anxiety"
@@ -93,7 +93,7 @@
 
                 <Button
                     android:id="@+id/button_bipolar"
-                    android:textColor="#070505"
+                    android:textColor="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -109,7 +109,7 @@
 
                 <Button
                     android:id="@+id/button_depression"
-                    android:textColor="#070505"
+                    android:textColor="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -125,7 +125,7 @@
 
                 <Button
                     android:id="@+id/button_ocd"
-                    android:textColor="#070505"
+                    android:textColor="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -141,7 +141,7 @@
 
                 <Button
                     android:id="@+id/button_ptsd"
-                    android:textColor="#070505"
+                    android:textColor="@color/white"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
