--- a/app/src/main/res/layout/activity_relax.xml
+++ b/app/src/main/res/layout/activity_relax.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.relax.Relax">
+    tools:context=".ui.relax.Relax"
+    android:background="@color/Hex">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab"
@@ -17,11 +18,13 @@
         app:tabIndicatorHeight="2dp"
         app:tabMode="fixed"
         app:tabTextAppearance="@style/TabLayoutText"
+        app:tabBackground="@color/Hex"
         />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="@color/Hex"/>
 
 </LinearLayout>
