--- a/app/src/main/res/layout/activity_time_change.xml
+++ b/app/src/main/res/layout/activity_time_change.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/Hex"
+    >
 
     <TextView
         android:id="@+id/textView8"
@@ -12,7 +14,7 @@
         android:paddingTop="60dp"
         android:paddingBottom="10dp"
         android:text="@string/update_times"
-        android:textColor="@color/white"
+        android:textColor="#234E70"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
