--- a/app/src/main/res/layout/doctor_custom_list_view.xml
+++ b/app/src/main/res/layout/doctor_custom_list_view.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="@color/Hex"
     android:layout_height="match_parent">
 
     <TextView
@@ -54,7 +54,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/ic_baseline_delete_24"
-        android:backgroundTint="@color/OrangeAeroSpace"
+        android:backgroundTint="#234E70"
         tools:layout_editor_absoluteX="254dp"
         tools:layout_editor_absoluteY="56dp"
         android:contentDescription="TODO" />
